force-app/main/default/objects/AcctPlanCompanyProfile__c/AcctPlanCompanyProfile__c.object-meta.xml
<CustomObject>
    <description>Account Plan Company Profile</description>
    <label>Account Plan Company Profile</label>
    <nameField>
        <displayFormat>Com-{0000000}</displayFormat>
        <label>AcctPlanCompanyProfile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Company Profile</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>