force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account</description>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Account_Type__c</field>
            <operation>notEqual</operation>
            <value>Disqualified Prospect</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Plan Company Profile</relationshipLabel>
    <relationshipName>Account_Plan_Company_Profile</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>