force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <description>Name of the customer</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Name of the customer</inlineHelpText>
    <label>Customer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>