force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/AccountPlanWalletID__c.field-meta.xml
<CustomField>
    <fullName>AccountPlanWalletID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AccountPlanWalletID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>