force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/AcctPlanGroup__c.field-meta.xml
<CustomField>
    <fullName>AcctPlanGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Plan Group</description>
    <label>Account Plan Group</label>
    <referenceTo>AcctPlanGroupProfile__c</referenceTo>
    <relationshipLabel>Account Plan Company Profile</relationshipLabel>
    <relationshipName>Account_Plan_Company_Profile</relationshipName>
    <type>Lookup</type>
</CustomField>