force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/BargainingPowerOfBuyerDescription__c.field-meta.xml
<CustomField>
    <fullName>BargainingPowerOfBuyerDescription__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>การใส่คำอธิบายเพื่อขยายความอำนาจการต่อรองของ Buyers ให้ชัดเจนยิ่งขึ้น</inlineHelpText>
    <label>Bargaining Power Of Buyer Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>