force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/BargainingPowerOfSupplier__c.field-meta.xml
<CustomField>
    <fullName>BargainingPowerOfSupplier__c</fullName>
    <description>Suppliers:  Bargaining  power of suppliers</description>
    <inlineHelpText>Please select item : คือการให้เลือกระดับของอำนาจการต่อรองกับ supplier</inlineHelpText>
    <label>Suppliers:Bargaining  power of suppliers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium to high</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low to medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>