force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/BarrierOfNewEntrant__c.field-meta.xml
<CustomField>
    <fullName>BarrierOfNewEntrant__c</fullName>
    <description>Barrier of New entrants</description>
    <inlineHelpText>Please select item : คือการให้เลือกระดับของอุปสรรคในการขัดขวางการเข้ามาของผุ้ประกอบธุรกิจในลักษณะเดียวกันที่จะเข้ามาในตลาด (การเข้ามาของผู้เล่นรายใหม่)</inlineHelpText>
    <label>Barrier of New entrants</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium to high</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low to medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>