force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/BarrierOfNewEntrantDescription__c.field-meta.xml
<CustomField>
    <fullName>BarrierOfNewEntrantDescription__c</fullName>
    <description>Barrier of New entrants</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>การใส่คำอธิบายเพื่อขยายความเกี่ยวกับอุปสรรคในการขัดขวางผู้ประกอบธุรกิจในลักษณะเดียวกันเข้ามาในตลาด</inlineHelpText>
    <label>Barrier Of New Entrant Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>