force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/Business_Code__c.field-meta.xml
<CustomField>
    <fullName>Business_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Business Code (with description)
Note: this field is used in Executive Summary</inlineHelpText>
    <label>Business Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>