force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/BusinessFlow__c.field-meta.xml
<CustomField>
    <fullName>BusinessFlow__c</fullName>
    <description>Business Flow</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ธุรกรรมภายในบริษํท ทั้งในส่วนของการซื้อและขาย  นอกจากนี้ยังครอบคลุมกรณีมีการขายระหว่างบริษัทในกลุ่มด้วย</inlineHelpText>
    <label>Company​ Business Flow/group transaction</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>