force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/CloneSourceId__c.field-meta.xml
<CustomField>
    <fullName>CloneSourceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Returns the ID of the entity from which an object was cloned</description>
    <inlineHelpText>Returns the ID of the entity from which an object was cloned</inlineHelpText>
    <label>CloneSourceId</label>
    <referenceTo>AcctPlanCompanyProfile__c</referenceTo>
    <relationshipLabel>Account Plan Company Profile</relationshipLabel>
    <relationshipName>Account_Plan_Company_Profile1</relationshipName>
    <type>Lookup</type>
</CustomField>