force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/Company_Industry_Info__c.field-meta.xml
<CustomField>
    <fullName>Company_Industry_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Company&apos;s Industry</description>
    <inlineHelpText>Company&apos;s Industry
Note: this field is used in Executive Summary</inlineHelpText>
    <label>Company Industry</label>
    <referenceTo>Industry__c</referenceTo>
    <relationshipLabel>Account Plan Company Profile</relationshipLabel>
    <relationshipName>Account_Plan_Company_Profile</relationshipName>
    <type>Lookup</type>
</CustomField>