force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/CompanyStrategy__c.field-meta.xml
<CustomField>
    <fullName>CompanyStrategy__c</fullName>
    <description>Company Strategy</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>กลยุทธ์ของบริษัทซึ่งเป็นการใส่แบบ free text</inlineHelpText>
    <label>Company Strategy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>