force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/CustomerSince__c.field-meta.xml
<CustomField>
    <fullName>CustomerSince__c</fullName>
    <description>Customer Since</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>TMB customer since
Note: this field is used in Executive Summary</inlineHelpText>
    <label>TMB Customer Since</label>
    <type>Date</type>
</CustomField>