force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/EstablishedSince__c.field-meta.xml
<CustomField>
    <fullName>EstablishedSince__c</fullName>
    <description>Established Since</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Business established since
Note: this field is used in Executive Summary
(สามารถพิมพ์วันที่ที่ต้องการในช่องได้)</inlineHelpText>
    <label>Business Established Since</label>
    <type>Date</type>
</CustomField>