force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/ExpectedNIByAcctPlan__c.field-meta.xml
<CustomField>
    <fullName>ExpectedNIByAcctPlan__c</fullName>
    <description>Expected NI By Account Plan</description>
    <label>Expected NI By Account Plan</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>