force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/FactorType3__c.field-meta.xml
<CustomField>
    <fullName>FactorType3__c</fullName>
    <inlineHelpText>Success factor ที่ทำให้ธุรกิจประสบความสำเร็จ ซึ่งขึ้นอยู่กับการที่ RM วิเคราะห์และเลือกว่า กลุ่มบริษัทนั้นๆ มี key success factor อะไรบ้าง โดยสามารถเลือกจาก list of value และทำการขยายความให้ชัดเจนขึ้น</inlineHelpText>
    <label>Factor Type 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Economy of scale</fullName>
            </value>
            <value>
                <fullName>Long existance in business</fullName>
            </value>
            <value>
                <fullName>Cost effectiveness</fullName>
            </value>
            <value>
                <fullName>Business Integration</fullName>
            </value>
            <value>
                <fullName>Strong/Secured buyers</fullName>
            </value>
            <value>
                <fullName>Strong/Secured suppliers</fullName>
            </value>
            <value>
                <fullName>Oligopoly/Monopoly</fullName>
            </value>
            <value>
                <fullName>Strong professional management team</fullName>
            </value>
            <value>
                <fullName>High Technology</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>