force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/FactorType3Description__c.field-meta.xml
<CustomField>
    <fullName>FactorType3Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>การขยายความ key Success factor ที่ทำให้ธุรกิจประสบความสำเร็จ ซึ่งขึ้นอยู่กับการที่ RM วิเคราะห์และเลือกว่า กลุ่มบริษัทนั้นๆ มี key success factor อะไรบ้าง และเมื่อเลือกจาก drop down list แล้ว RM สามารถเขียนขยายความให้ชัดเจนยิ่งขึ้น</inlineHelpText>
    <label>Factor Type 3 Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>