force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/FinancialHighlight__c.field-meta.xml
<CustomField>
    <fullName>FinancialHighlight__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ตัวเลขสำคัญทางการเงิน ซึ่งสามารถให้ข้อมูลสรุปภาพรวมของ business performance ของบริษัท
Note: this field is used in Executive Summary</inlineHelpText>
    <label>Financial Highlight - Individual</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>