force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/IndustryCompetitionDescription__c.field-meta.xml
<CustomField>
    <fullName>IndustryCompetitionDescription__c</fullName>
    <description>Industry Competition Description</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>การใส่คำอธิบายขยายความเรื่องของความรุนแรงในการแข่งขันภายในอุตสาหกรรม</inlineHelpText>
    <label>Industry Competition Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>