force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/isAvailableforApproval__c.field-meta.xml
<CustomField>
    <fullName>isAvailableforApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAvailableforApproval</label>
    <type>Checkbox</type>
</CustomField>