force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/isHasActionPlan__c.field-meta.xml
<CustomField>
    <fullName>isHasActionPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isHasActionPlan</label>
    <type>Checkbox</type>
</CustomField>