force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/isHasProdStrategy__c.field-meta.xml
<CustomField>
    <fullName>isHasProdStrategy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isHasProdStrategy</label>
    <type>Checkbox</type>
</CustomField>