force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/isMiniMode__c.field-meta.xml
<CustomField>
    <fullName>isMiniMode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMiniMode</label>
    <type>Checkbox</type>
</CustomField>