force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/NoOfEmployee__c.field-meta.xml
<CustomField>
    <fullName>NoOfEmployee__c</fullName>
    <description>No of Employee</description>
    <inlineHelpText>No.of employee
Note: this field is used in Executive Summary</inlineHelpText>
    <label>No of Employee</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>