force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/Other_Information__c.field-meta.xml
<CustomField>
    <fullName>Other_Information__c</fullName>
    <description>Other Information</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Other Business Information 
Note: this field is used in Executive Summary</inlineHelpText>
    <label>Business Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>