force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/Parent_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company_Name__c</fullName>
    <description>Parent Company</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Parent Company</inlineHelpText>
    <label>Parent Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>