force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/Parent_Industry_Info__c.field-meta.xml
<CustomField>
    <fullName>Parent_Industry_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Industry</description>
    <inlineHelpText>Parent Industry</inlineHelpText>
    <label>Parent Industry</label>
    <referenceTo>Industry__c</referenceTo>
    <relationshipLabel>Account Plan Company Profile (Parent Industry)</relationshipLabel>
    <relationshipName>Account_Plan_Company_Profile1</relationshipName>
    <type>Lookup</type>
</CustomField>