force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/Performance__c.field-meta.xml
<CustomField>
    <fullName>Performance__c</fullName>
    <description>Performance</description>
    <label>Performance</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>