force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Portfolio</description>
    <label>Portfolio</label>
    <referenceTo>AcctPlanPortfolio__c</referenceTo>
    <relationshipLabel>Account Plan Company Profile</relationshipLabel>
    <relationshipName>Account_Plan_Company_Profile</relationshipName>
    <type>Lookup</type>
</CustomField>