force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/SubIndustry__c.field-meta.xml
<CustomField>
    <fullName>SubIndustry__c</fullName>
    <description>Sub-Industry</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Sub-industry</inlineHelpText>
    <label>Sub-Industry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>