force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/SumOfBuyerEstimateNo__c.field-meta.xml
<CustomField>
    <fullName>SumOfBuyerEstimateNo__c</fullName>
    <description>Sum of Buyer Estimate No of Buyer</description>
    <label>Sum of Buyer Estimate No</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>