force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/SumOfBuyerPercent__c.field-meta.xml
<CustomField>
    <fullName>SumOfBuyerPercent__c</fullName>
    <description>Sum of Buyer Percent</description>
    <label>Sum of Buyer Percent</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>