force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/SumOfSupplierEstimateNo__c.field-meta.xml
<CustomField>
    <fullName>SumOfSupplierEstimateNo__c</fullName>
    <description>Sum of Supplier Estimate No</description>
    <label>Sum of Supplier Estimate No</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>