force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/SumOfSupplierPercent__c.field-meta.xml
<CustomField>
    <fullName>SumOfSupplierPercent__c</fullName>
    <description>Sum of Supplier Percent</description>
    <label>Sum of Supplier Percent</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>