force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/TargetNIByRM__c.field-meta.xml
<CustomField>
    <fullName>TargetNIByRM__c</fullName>
    <label>Target NI By RM</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>