force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/ThreatOfSubstituteProductDescription__c.field-meta.xml
<CustomField>
    <fullName>ThreatOfSubstituteProductDescription__c</fullName>
    <description>Threat of Substitute Product Description</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>การใส่คำอธิบายขยายความเรื่องระดับอุปสรรคในการหาสินค้าทดแทนให้ชัดเจนยิ่งขึ้น</inlineHelpText>
    <label>Threat of substitute product Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>