force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/TMB_Business__c.field-meta.xml
<CustomField>
    <fullName>TMB_Business__c</fullName>
    <description>TMB Business</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>TMB Business 
Note: this field is used in Executive Summary</inlineHelpText>
    <label>TMB Business</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>