force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/Top5Buyer2Percent__c.field-meta.xml
<CustomField>
    <fullName>Top5Buyer2Percent__c</fullName>
    <description>Top5 Buyer2 Percent</description>
    <label>Top5 Buyer2 Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>