force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/Top5Buyer2TermDays__c.field-meta.xml
<CustomField>
    <fullName>Top5Buyer2TermDays__c</fullName>
    <description>Top5 Buyer2 Term Days</description>
    <label>Top5 Buyer2 Term Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>