force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/Top5BuyerNote__c.field-meta.xml
<CustomField>
    <fullName>Top5BuyerNote__c</fullName>
    <description>Top5 Buyer Note</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Note:</inlineHelpText>
    <label>Note:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>