force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/Top5Supplier2Name__c.field-meta.xml
<CustomField>
    <fullName>Top5Supplier2Name__c</fullName>
    <description>Top5 Supplier2 Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Top5 Supplier2 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>