force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/UltimateCompany__c.field-meta.xml
<CustomField>
    <fullName>UltimateCompany__c</fullName>
    <description>UltimateCompany</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Ultimate Parent</inlineHelpText>
    <label>Ultimate Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>