force-app/main/default/objects/AcctPlanCompanyProfile__c/fields/Wallet__c.field-meta.xml
<CustomField>
    <fullName>Wallet__c</fullName>
    <description>Wallet</description>
    <label>Wallet</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>