force-app/main/default/objects/AcctPlanCompanyProfile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountName__c</columns>
    <columns>Portfolio__c</columns>
    <columns>Account__c</columns>
    <columns>AcctPlanGroup__c</columns>
    <columns>Year__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>